# chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
src/: bishop.cpp  bishop.hpp  game.cpp  game.h  game.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  main.cpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp  square.cpp  square.hpp
